fix: overflow of treeCounterdata

--- a/src/features/common/TreeCounter/TreeCounter.module.scss
+++ b/src/features/common/TreeCounter/TreeCounter.module.scss
@@ -106,5 +106,5 @@
   width: 198px;
   color: #4F4F4F;
   font-weight: bold;
-  font-size: 45px;
+  font-size: 2rem;
 }
